@@ -190,7 +190,8 @@ Updated Sophisticated Storage.
 Updated Waystones.
 
 Added Andesite Mesh & Dirt Waterlogged Create Sifting Recipe.
+Doubled wire output in Immersive Engineering metal press to incentivize user to get metal press (beyond cheaper Create Saw).
+Added Mystical Agriculture Seeds to Garden Cloche.
 Added to Pam's Harvestcraft Questline.
 Added quests in Create chapter (rose quartz, electron tube, deployer, precision mechanism, mechanical arm, rotation speed controller).
 Started Immersive Engineering questline.
-Doubled wire output in Immersive Engineering metal press to incentivize user to get metal press (beyond cheaper Create Saw).
